Retooled Overhead Shuffle Algorithm in CardPile